<?xml version="1.0"?>
<package format="3">
  <name>internet_speed_display</name>
  <version>0.1.0</version>
  <description>A ROS 2 package to display internet speed</description>

  <maintainer email="TRyamamototeruma@gmail.com">Teruma Yamamoto</maintainer>
  <license>BSD 3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclpy</build_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>speedtest-cli</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

